package part2;

public class ClassicHamburger implements Hamburger {

    @Override
    public String serve() {
        return "ClassicHamburger";
    }
}
