package part2;

//TODO: add decorators (do not change the supplied Hamburger classes)
public interface Hamburger {
    String serve();
}
