package part2;

public class HomemadeHamburger implements Hamburger {

    @Override
    public String serve() {
        return "HomemadeHamburger";
    }
}
