package part2;

public class LambHamburger implements Hamburger {

    @Override
    public String serve() {
        return "LambHamburger";
    }
}
