package part2;

public class SpicyHamburger implements Hamburger {

    @Override
    public String serve() {
        return "SpicyHamburger";
    }
}
