' Generated by UML Generator
' Encoded: ZP9DYy9038RlyojoL8JYsOCemgBWhRyWfbaDsvbA9brm_VZjExl5Obj1BxcyJnxU3BE8XcgrBrtyad14HGzKOenBCvLTRRoXAkJomp1r1oaOI9HATkwVWjNV55gZtzMwPuMp0vX4rcyUZMUG9qdOkwjp4epr4ucXozwUi8swvJwGhD9JepwdmYPq1L96unOQKLNmNP9iRV0Wh3nxBFXrsORV9kvTDZyAdLx3W-VAiilyeUlWvYphn8CBUllTohsmrx6NBZWKwH_y0W
' URL: http://www.plantuml.com/plantuml/uml/ZP9DYy9038RlyojoL8JYsOCemgBWhRyWfbaDsvbA9brm_VZjExl5Obj1BxcyJnxU3BE8XcgrBrtyad14HGzKOenBCvLTRRoXAkJomp1r1oaOI9HATkwVWjNV55gZtzMwPuMp0vX4rcyUZMUG9qdOkwjp4epr4ucXozwUi8swvJwGhD9JepwdmYPq1L96unOQKLNmNP9iRV0Wh3nxBFXrsORV9kvTDZyAdLx3W-VAiilyeUlWvYphn8CBUllTohsmrx6NBZWKwH_y0W
' Generated on: 2026-06-02T23:46:46.808505400

@startuml
skinparam classAttributeIconSize 0
hide circle

class ClassicHamburger {
  +serve(): String
}

interface Hamburger {
  ~serve(): String
}

class HamburgerFactory {
  +{static} createHamburger(code: String): Hamburger
}

class HomemadeHamburger {
  +serve(): String
}

class LambHamburger {
  +serve(): String
}

class SpicyHamburger {
  +serve(): String
}

ClassicHamburger ..|> Hamburger
HamburgerFactory ..> Hamburger
HomemadeHamburger ..|> Hamburger
LambHamburger ..|> Hamburger
SpicyHamburger ..|> Hamburger
@enduml